--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,14 @@ language: c                 # 语言环境
 notifications:              # 每次构建提醒
     email: false
 
-sudo: false                 # 开启基于容器的 travis CI 任务
+# 指定测试使用编译器
+compiler:
+    - gcc
+
+## 再安装之前
+#before_install: make
+
+install: make gcc
+
+# 构建
+script: make
