--- a/.gitignore
+++ b/.gitignore
@@ -1,65 +1,8 @@
 # This file is used to ignore files which are generated
 # ----------------------------------------------------------------------------
 
-bin/
-lib/
+.idea/
 
-*.pro.user*
-*~
-*.autosave
-*.a
-*.core
-*.moc
-*.o
-*.obj
-*.orig
-*.rej
-*.so
-*.so.*
-*_pch.h.cpp
-*_resource.rc
-*.qm
-.#*
-*.*#
-!core/
-tags
-.DS_Store
-.directory
-*.debug
-*.prl
-*.app
-Thumbs.db
-*.res
-*.rc
-/.qmake.cache
-/.qmake.stash
-
-# xemacs temporary files
-*.flc
-
-# Vim temporary files
-.*.swp
-
-# Visual Studio generated files
-*.ib_pdb_index
-*.idb
-*.ilk
-*.pdb
-*.suo
-*vcproj.*.*.user
-*.ncb
-*.sdf
-*.opensdf
-
-# MinGW generated files
-*.Debug
-*.Release
-
-# Python byte code
-*.pyc
-
-# Binaries
-# --------
 *.dll
 *.exe
 
